[package]
authors = [
    "Dustin Martin <dustin@dmartin.io>",
    "picoCTF Team <opensource@picoctf.org>",
]
description = "Command line tool for removing expired Docker resources"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "docker-reaper"
repository = "https://github.com/picoCTF/docker-reaper"
version = "1.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
bollard = { version = "0.18.1", features = ["ssl"] }
chrono = { version = "0.4.40", default-features = false, features = [
    "std",
    "clock",
] }
clap = { version = "4.5.34", features = ["derive"] }
futures = "0.3.31"
go-parse-duration = "0.1.1"
tabled = "0.18.0"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
serial_test = { version = "3.2.0" }
tokio-stream = "0.1.17"
