[package]
authors = ["picoCTF Team <opensource@picoctf.org>"]
description = "Command line tool for removing expired Docker resources"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "docker-reaper"
repository = "https://github.com/picoCTF/docker-reaper"
version = "1.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
bollard = { version = "0.18.1", features = ["ssl"] }
chrono = { version = "0.4.41", default-features = false, features = [
    "std",
    "clock",
] }
clap = { version = "4.5.48", features = ["derive"] }
futures = "0.3.31"
go-parse-duration = "0.1.1"
tabled = "0.20.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
serial_test = { version = "3.2.0" }
tokio-stream = "0.1.17"
